# FTK_Claw_Bot

./: .gitignore  DEVELOPMENT_REPORT.md  README.md  README_en.md  check_encoding_detailed.py  check_import.py  checklist.md  claude-progress.txt  features.json  ftkclawbot.py  init.sh  make_nanobot_distro.bat  nanobot-1.0.0+ftk-py3-none-any.whl  pyproject.toml  requirements.txt  router.py  setup.py  upport'
.trae/documents/: bridge_optimization_plan.md  chat_windows_bridge_optimization_plan.md  detailed_improvement_plan.md  nanobot_local_packaging_plan.md  project_analysis_and_improvement_plan.md  代码优化建议.md  文档注释优化计划.md
docs/: FTK_Bot设计方案.md  checklist.md
docs/plans/: 2026-02-28-ipc-action-router-design.md  2026-02-28-ipc-action-router.md
embedding-service/: MANIFEST.in  README.md  requirements.txt  setup.py
embedding-service/Qwen3-Embedding-0.6B-ONNX/tokenizer/: tokenizer_config.json  vocab.txt
embedding-service/app/: __init__.py  embedder.py  main.py
freellm/: README.md  __init__.py  __main__.py  client.py  install-wsl-freellm.bat  logger.py  main.py  pyproject.toml  router.py  service_config.py  service_manager.py  uninstall-wsl-freellm.bat  wsl_freellm_manager.py
freellm/gui/: __init__.py  main_window.py  service_panel.py  simple_wsl_manager.py  styles.py  tray_icon.py
ftk_bot/: __init__.py  main.py
ftk_bot/bridge/: protocol.py
ftk_bot/core/: __init__.py  config_manager.py  nanobot_controller.py  wsl_manager.py
ftk_bot/gui/: __init__.py  main_window.py  styles.py
ftk_bot/gui/dialogs/: __init__.py  settings_dialog.py  skill_editor.py
ftk_bot/gui/resources/: styles.qss
ftk_bot/gui/widgets/: __init__.py  chat_panel.py  config_panel.py  log_panel.py  overview_panel.py  skill_panel.py  wsl_panel.py
ftk_bot/models/: __init__.py  nanobot_config.py  skill.py  wsl_distro.py
ftk_bot/services/: __init__.py  monitor_service.py
ftk_bot/utils/: __init__.py  logger.py  path_utils.py  validators.py
ftk_claw_bot/: __init__.py  app.py  constants.py  container.py  events.py  main.py
ftk_claw_bot/bridge/: __init__.py  bridge_agent.py  protocol.py
ftk_claw_bot/core/: __init__.py  bridge_manager.py  clawbot_controller.py  clawbot_gateway_manager.py  config_manager.py  config_sync_manager.py  group_chat_manager.py  multi_clawbot_gateway_manager.py  multi_nanobot_gateway_manager.py  nanobot_controller.py  nanobot_distro_configurator.py  nanobot_gateway_manager.py  port_manager.py  skill_manager.py  wsl_manager.py
ftk_claw_bot/gui/: __init__.py  main_window.py  styles.py
ftk_claw_bot/gui/dialogs/: __init__.py  create_distro_wizard.py  message_dialog.py  settings_dialog.py  skill_editor.py  waiting_dialog.py
ftk_claw_bot/gui/mixins/: __init__.py  wsl_state_aware.py
ftk_claw_bot/gui/resources/: styles.qss
ftk_claw_bot/gui/widgets/: __init__.py  channel_config_dialog.py  chat_panel.py  command_panel.py  config_panel.py  local_services_panel.py  log_panel.py  multi_model_config_widget.py  nanobot_panel.py  overview_panel.py  skills_config_widget.py  splash_screen.py  whitelist_panel.py  windows_bridge_panel.py  wsl_panel.py
ftk_claw_bot/interfaces/: __init__.py  config.py  controller.py  wsl.py
ftk_claw_bot/models/: __init__.py  channel_config.py  clawbot_config.py  nanobot_config.py  skill.py  skill_config.py  wsl_distro.py
ftk_claw_bot/plugins/: __init__.py  base.py  manager.py
ftk_claw_bot/services/: __init__.py  action_router.py  app_whitelist.py  clawbot_chat_client.py  clawbot_upgrader.py  ipc_server.py  monitor_service.py  nanobot_chat_client.py  ocr_automation.py  service_registry.py  session_store.py  web_agent_executor.py  web_automation.py  windows_bridge.py  wsl_initializer.py  wsl_state_service.py  服务开发规范和指南.md
ftk_claw_bot/services/embedding/: __init__.py  embedder.py  server.py  service.py
ftk_claw_bot/translations/: en_US.json  zh_CN.json
ftk_claw_bot/utils/: __init__.py  async_ops.py  crash_handler.py  i18n.py  logger.py  path_converter.py  path_utils.py  performance.py  thread_safe.py  user_data_dir.py  validators.py
ftk_claw_bot/web_api_agent/: __init__.py  config.py
ftk_claw_bot/web_api_agent/core/: __init__.py  ai_snapshot.py  data_extractor.py  session_manager.py  ssrf_guard.py  web_agent.py
ftk_claw_bot/web_api_agent/utils/: __init__.py  helpers.py
init_wsl/: README.md  check_wsl_version.bat  check_wsl_version.py  clawbot-0.1.5.1-py3-none-any.whl  clawbot-0.1.5.2-py3-none-any.whl  clawbot-0.1.5.3-py3-none-any.whl  make_nanobot_distro.bat  make_nanobot_distro_manual.bat  nanobot-0.1.0.2-py3-none-any.whl  nanobot-0.1.4.1-py3-none-any.whl  nanobot-0.1.4.2-py3-none-any.whl  nanobot-0.1.4.3-py3-none-any.whl  nanobot-1.0.4.1-py3-none-any.whl
opencode_client/: README.md  SYSTEMD.md  __init__.py  client.py  pyproject.toml  router.py  test.py
tests/: test_all.py
