[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftk-bot"
version = "0.1.0"
description = "Windows桌面应用，用于管理WSL2中的Nanobot AI助手"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FTK_Bot Team", email = "ftk-bot@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "pywinauto>=0.6.8",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "pywin32>=306",
    "watchdog>=3.0.0",
]

[project.scripts]
ftk-bot = "ftk_bot.main:main"

[project.urls]
Homepage = "https://github.com/your-org/FTK_Bot"
Repository = "https://github.com/your-org/FTK_Bot"
