[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ftk-claw-bot"
version = "1.1.0"
description = "Windows桌面应用，用于管理WSL2中的clawbot助手，并扩展clawbot对windows的操作"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "FTK Team", email = "zeusftk@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "PyQt6>=6.5.0",
    "psutil>=5.9.0",
    "pyautogui>=0.9.54",
    "Pillow>=10.0.0",
    "cryptography>=41.0.0",
    "watchdog>=3.0.0",
    "websockets>=12.0",
    "loguru>=0.7.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "onnxruntime>=1.16.0",
    "uvicorn>=0.23.0",
    "playwright>=1.40.0",
]

[project.optional-dependencies]
windows = [
    "pywin32>=306",
    "pywinauto>=0.6.8",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
ftkclawbot = "ftk_claw_bot.main:main"

[project.urls]
Homepage = "https://github.com/your-org/FTK_Claw_Bot"
Repository = "https://github.com/your-org/FTK_Claw_Bot"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
